<resources>
    <string name="app_name">WordsTrainer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="translate">translate</string>
    <string name="google_sheets">Google Sheets</string>
    <string name="selected_sheet">Selected Sheet</string>
    <string name="select_sheet">Select sheet</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="translation_direction">Translation direction</string>
    <string name="settings">Settings</string>
    <string name="translation">Translation</string>
    <string name="repetition">Repetition</string>
    <string name="enter_sheet_name">Enter new sheet name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_sheet">New sheet</string>
    <string name="select_lang_source">Select source lang</string>
    <string name="select_lang_translation">Select translation lang</string>
    <string name="word_to_translate">enter here</string>
    <string name="not_translated">Not translated</string>
    <string name="import_words">Import words</string>
    <string name="import_words_button">Import</string>
    <string name="export_words">Export words</string>
    <string name="export_words_button">Export</string>
    <string name="no_connection">No Network connection</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="sign_in_failed">Google Sign In failed</string>
    <string name="privacy_link">http://bogomolovaa.github.io/WordsTrainer/</string>

    <string name="en_lang">English</string>
    <string name="de_lang">German</string>
    <string name="fr_lang">French</string>
    <string name="ru_lang">Russian</string>
    <string name="es_lang">Spanish</string>

</resources>
